@@ -1,11 +1,19 @@
-#gamefox-button-options,
 #gamefox-button-sidebar
 {
-  list-style-image: url("chrome://gamefox/skin/btn-large.png");
+  list-style-image: url("chrome://gamefox/skin/btn-sidebar-large.png");
+  }
+
+#gamefox-button-options
+{
+  list-style-image: url("chrome://gamefox/skin/btn-options-large.png");
 }
 
-toolbar[iconsize="small"] #gamefox-button-options,
 toolbar[iconsize="small"] #gamefox-button-sidebar
 {
-  list-style-image: url("chrome://gamefox/skin/btn-small.png");
+  list-style-image: url("chrome://gamefox/skin/btn-sidebar-small.png");
+  }
+
+toolbar[iconsize="small"] #gamefox-button-options
+{
+  list-style-image: url("chrome://gamefox/skin/btn-options-small.png");
 }
