@@ -5,6 +5,7 @@
     * New CSS: SpotFAQs
     * Improve the GameFAQs clock and add it to the options window
     * New CSS: 8for11
+    * Different icons for the sidebar and options toolbar buttons
 
 2009-07-02:
     * version 0.7.3
